# askesigraph

./: .gitignore  LICENSE.md  pyproject.toml
ontology/: core.trig  mapping.trig
src/askesigraph/: cli.py  ingest.py  view.py
src/askesigraph/cli/: __init__.py  audit.py  export.py  ingest.py  mappings.py  materialize.py  ontology.py  query.py  visualize.py
src/askesigraph/model/: arboleaf.py  myfitnesspal.py
src/askesigraph/rdf/: graphs.py  ingest.py  materialization.py  namespaces.py  query.py  store.py
